# state_ptr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  appveyor.yml  state_ptr.hpp  test.cpp
include/putl/: state_ptr.hpp
testsrc/: CMakeLists.txt  log2_tests.cpp  state_ptr_tests.cpp  unit_tests.cpp
